--- a/resources/views/layout.ejs
+++ b/resources/views/layout.ejs
@@ -24,7 +24,7 @@
   <body>
     <nav class="py-4 container mx-auto flex items-center justify-between">
       <div>
-        <a href="/"><img src="/img/cart.png" alt="logo" /></a>
+        <h1><a class="font-bold text-green-700" href="/">Trang chủ</a></h1>
       </div>
       <div>
         <ul class="flex items-center">
