--- a/resources/views/customers/cart.ejs
+++ b/resources/views/customers/cart.ejs
@@ -27,11 +27,35 @@
       <div class="text-right py-4">
         <span class="text-lg font-bold">Tổng tiền:</span>
         <span class="amount text-2xl font-bold"
-          >$<%= session.cart.totalPrice %></span
+          ><%= new Intl.NumberFormat('en-US', { style: 'currency', currency:
+          'USD', }).format(session.cart.totalPrice) %></span
         >
         <div>
           <% if (user) { %>
-          <form method="POST" class="mt-12" action="/orders">
+          <form method="POST" class="mt-12" id="payment-form" action="/orders">
+            <div class="relative w-1/2 ml-auto mb-4">
+              <select
+                id="paymentType"
+                name="paymentType"
+                class="block appearance-none w-full bg-white border border-gray-400 hover:border-gray-500 px-4 py-2 pr-8 rounded leading-tight focus:outline-none focus:shadow-outline"
+              >
+                <option value="cod">Thanh toán khi giao hàng</option>
+                <option value="card">Thanh toán bằng thẻ</option>
+              </select>
+              <div
+                class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-gray-700"
+              >
+                <svg
+                  class="fill-current h-4 w-4"
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 20 20"
+                >
+                  <path
+                    d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"
+                  />
+                </svg>
+              </div>
+            </div>
             <input
               name="phone"
               placeholder="Phone number..."
@@ -45,6 +69,7 @@
               class="border border-gray-400 p-2 w-1/2"
               type="text"
             />
+            <div class="mt-4" id="card-element"></div>
             <div>
               <button
                 class="mt-6 btn-primary px-6 py-2 rounded-full text-white font-bold"
